# filecano

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  compose.e2e.yml  compose.yml
backend/: .env.example  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: auth_middleware.py  dependencies.py  exception_handling.py
backend/app/api/dependencies/: __init__.py  auth.py  exception_handling.py  services.py
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: files.py  folders.py  links.py  users.py
backend/app/core/: __init__.py  config.py  cookie.py  exceptions.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  archive.py  file.py  file_link_relation.py  folder.py  folder_link_relation.py  link.py  user.py
backend/app/repositories/: __init__.py  archive_repository.py  base_repository.py  file_repository.py  folder_repository.py  link_repository.py  user_repository.py
backend/app/schemas/: __init__.py  file_params.py  file_responses.py  files.py  link_params.py  link_responses.py  params.py  user_params.py  user_responses.py
backend/app/schemas/params/: bulk_params.py  file_params.py  folder_params.py  link_params.py  paginate_params.py  user_params.py
backend/app/schemas/responses/: file_responses.py  folder_responses.py  link_responses.py  paginated_response.py  user_responses.py
backend/app/services/: __init__.py  archive_service.py  auth_service.py  base_service.py  file_service.py  file_storage_service.py  folder_service.py  link_service.py  user_service.py
backend/app/tasks/: README.md  __init__.py  celery.py  clean_not_retained.py
backend/app/tests/integration/: helpers.py  test_api.py
backend/app/tests/unit/: helpers.py  test_celery.py  test_clean_not_retained.py
backend/app/tests/unit/api/: test_dependencies.py
backend/app/tests/unit/core/: test_config.py  test_cookie.py  test_exceptions.py  test_security.py
backend/app/tests/unit/db/: test_session.py
backend/app/tests/unit/repositories/: test_archive_repository.py  test_base_repository.py  test_file_repository.py  (+3 more)
backend/app/utils/: file.py  mimetypes.py  pagination.py  time.py
backend/migrations/: README  env.py
backend/migrations/versions/: 21887aa3f4e5_create_folders_and_relationships.py  22c1dae57623_create_relation_between_share_links_and_.py  33e50261ddce_add_index_to_original_name_and_create_.py  3417760500f8_add_custom_name_and_deleted_at_to_link.py  34645c3a2880_create_initial_tables.py  437efedb3046_add_index_to_tokens.py  471a2bfaf789_remove_uniqueness_for_folder_name.py  58e519035a68_make_size_bytes_a_bigint_to_allow_for_.py  6ce3ff41af2e_remove_column_dependant_expirantion_.py  7468fcfdffa2_add_timezone_to_datetime_columns.py  825e76f21c0b_add_index_to_names.py  892f19efa3a5_create_link_table_and_it_relational_.py  9da62d37cf23_change_folder_id_name.py  a446885cb92f_create_archive_table.py  b7c0f4101f36_fix_bytes.py  bbb8a1e8b212_add_preview_to_image_files.py  c02dad59edfe_add_expired_in_to_link_to_allow_.py  d6d12db8f240_add_cascadings.py
(+150 files in other folders)
