[project]
name = "filecano-backend"
version = "0.1.0"
description = "FastAPI backend for Filecano."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "pydantic-settings>=2.8,<3.0",
    "minio>=7.2,<8.0",
    "sqlmodel>=0.0.38",
    "python-multipart>=0.0.27",
    "uuid6>=2025.0.1",
    "email-validator>=2.3.0",
    "passlib[argon2]>=1.7.4",
    "alembic>=1.18.4",
    "pillow>=12.2.0",
    "content-types>=0.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0,<9.0",
    "pytest-cov>=5.0.0,<6.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "jinja2>=3.1.6,<4.0",
]
lint = [
    "ruff>=0.4.0",
    "black>=24.4.0",
]
git=[
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

[tool.uv]
package = false

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.coverage.run]
omit = ["src/tests/*"]
